--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- Testimonials -->
 
 <section class="colored-section" id="testimonials">
-  <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-pause="hover">
+  <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-pause="hover" data-interval="2000">
     <div class="carousel-inner">
       <div class="carousel-item active container-fluid">
         <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
