--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
 
 
 <section class="colored-section" id="title">
+
   <div class="container-fluid">
+
     <nav class="navbar navbar-expand-md navbar-dark ">
+
       <a class="navbar-brand" href="#">tindog</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -57,7 +61,9 @@
           </li>
         </ul>
       </div>
+
     </nav>
+
     <div class="row">
       <div class="col-lg-6">
         <h1 class="title-text">Meet new and interesting dogs nearby.</h1>
@@ -68,7 +74,9 @@
         <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
+
   </div>
+
 </section>
 
 
@@ -76,8 +84,11 @@
 <!-- Features -->
 
 <section class="white-section" id="features">
+
   <div class="container-fluid">
+
     <div class="row">
+
       <div class="feature-box col-lg-4">
         <i class="icon fas fa-check-circle fa-4x"></i>
         <h3 class="feature-title">Easy to use.</h3>
@@ -93,7 +104,9 @@
         <h3 class="feature-title">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
+
     </div>
+
   </div>
 
 </section>
@@ -103,7 +116,9 @@
 <!-- Testimonials -->
 
 <section class="colored-section" id="testimonials">
+
   <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-pause="hover" data-interval="2000">
+
     <div class="carousel-inner">
       <div class="carousel-item active container-fluid">
         <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
@@ -116,6 +131,7 @@
         <em>Beverly, Illinois</em>
       </div>
     </div>
+
     <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -124,14 +140,16 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+
   </div>
+
 </section>
 
 
 <!-- Press -->
 
 <section class="colored-section" id="press">
-  <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
+  <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
   <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
   <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
   <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -143,10 +161,11 @@
 
 <section class="white-section" id="pricing">
 
-
   <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
   <p>Simple and affordable price plans for your and your dog.</p>
+
   <div class="row">
+
     <div class="pricing-column col-lg-4 col-md-6 ">
       <div class="card">
         <div class="card-header">
@@ -161,6 +180,7 @@
         </div>
       </div>
     </div>
+
     <div class="pricing-column col-lg-4 col-md-6 ">
       <div class="card">
         <div class="card-header">
@@ -175,6 +195,7 @@
         </div>
       </div>
     </div>
+
     <div class="pricing-column col-lg-4 col-md-12 ">
       <div class="card">
         <div class="card-header">
@@ -190,7 +211,9 @@
         </div>
       </div>
     </div>
+
   </div>
+
 </section>
 
 
@@ -204,13 +227,13 @@
     <button type="button" class="btn btn-outline-light btn-lg cta-button"><i class="fab fa-google-play"></i> Download</button>
   </div>
 
-
 </section>
 
 
 <!-- Footer -->
 
 <footer class="white-section" id="footer">
+
   <div class="container-fluid">
     <i class="fab fa-twitter footer-icon "></i>
     <i class="fab fa-facebook-f footer-icon "></i>
@@ -218,7 +241,6 @@
     <i class="fas fa-envelope footer-icon"></i>
     <p>© Copyright 2018 TinDog</p>
   </div>
-
 
 </footer>
 
